<resources>
    <string name="app_name">GPSmarker</string>

    <string name="title_activity_inp">GPSmarker</string>
    <string name="action_settings">Settings</string>
    <string name="btn_add">Добавить</string>
    <string name="btn_gps">Настройки GPS</string>
    <string name="btn_sv">Сохранить</string>
    <string name="txt_name">Введите название</string>
    <string name="txt_name1">Имя метки</string>
    <string name="txt_lat">Координаты</string>
    <string name="txt_sts">Cатус GPS</string>

    <string name= "delete_record" >Удалить запись</string>
    <string name= "show_record" >Показать на карте</string>
    <string name="title_activity_maps">Map</string>

</resources>
